started new logo process and added more content for the website

--- a/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Coming Soon!";
+    ViewBag.Title = ":: Under Construction! :: Messiah Software Solutions Ltd Website + Blog";
 }
 
 <div class="MobileBGPlaceHolder">
@@ -8,42 +8,51 @@
 
 <div class="UnderConstructionWrapper">
 
-    <h2>@ViewBag.Title</h2>
+    @*<h2>@ViewBag.Title</h2>*@
+    <h2>Coming Soon! Website is under construction! <img src="~/images/comingsoon/bricks.png" />@*<img src="~/images/comingsoon/crown.png" />*@</h2>
 
     <br />
-    "Messiah Software Solutions LTD" is an israel company privately owned by <a href="about.me/vadimrasin" target="_blank">Vadim Rasin</a>.
+    "Messiah Software Solutions LTD" is a small business, private software company  from israel owned by <a href="https://about.me/vadimrasin" target="_blank">Vadim Rasin</a>.
     <br />
     <br />
-    We are looking for new cool projects! <br />
+    We are looking for cool projects! <br />
     We want to make a better world! <br />
-    Do you want to work with us? Give us a new project?  <br />
+    Come work with us! Give us a new project! :) <br />
     Need a little assistance or counseling?  <br />
-    But <span class="HeavyText">please</span>! Don't leave us after you are <span class="HeavyText">happy</span> and <span class="HeavyText">satisfied</span> from the <span class="HeavyText">
+    @*But <span class="HeavyText">please</span>! Don't leave us after you are <span class="HeavyText">happy</span> and <span class="HeavyText">satisfied</span> from the <span class="HeavyText">
         answered prophecies..
-    </span>
+    </span>*@
     <br />
     <br />
     Direct links of the owner for questions/offers: <br />
+
+
+
+    <span>
+        <img src="~/images/ComingSoon/email.png" border="0" height="26" width="26"
+             alt="Email Icon for Info@MessiahSolutions.com" title="Email Icon for Info@MessiahSolutions.com" />
+        <a href="mailto:Info@MessiahSolutions.com" title="Info@MessiahSolutions.com">Info@MessiahSolutions.com</a>
+    </span>
+    <br />
     <span>
         <img src="~/images/ComingSoon/FaceBook.png" border="0" height="26" width="26"
              alt="Facebook link of the owner vadim rasin" title="Facebook link of the owner vadim rasin" />
         <a href="https://facebook.com/vadimrasin" target="_blank">facebook.com/vadimrasin</a>
-    </span>
-    <br />
-
-    <span>
-        <img src="~/images/ComingSoon/Twitter.png" border="0" height="26" width="26"
-             alt="Twitter link of the owner vadim rasin" title="Twitter link of the owner vadim rasin" />
-        <a href="https://twitter.com/hsvdrv" target="_blank">twitter.com/hsvdrv</a>
     </span>
 
     <br />
     <span>
         <img src="~/images/ComingSoon/linkedin.png" border="0" height="26" width="26"
              alt="Linkedin of the owner vadim rasin" title="Linkedin of the owner vadim rasin" />
-        <a href="https://twitter.com/hsvdrv" target="_blank">linkedin.com/in/vadimrasin</a>
+        <a href="https://linkedin.com/in/vadimrasin" target="_blank">linkedin.com/in/vadimrasin</a>
     </span>
 
+    <br />
+    <span>
+        <img src="~/images/ComingSoon/Twitter.png" border="0" height="26" width="26"
+             alt="Twitter link of the owner vadim rasin" title="Twitter link of the owner vadim rasin" />
+        <a href="https://twitter.com/hsvdrv" target="_blank">twitter.com/hsvdrv</a>
+    </span>
 
     <br /><br />
     @*<br /><br />+ lots of text to test scroll<br /><br />
