misc ComingSoon changes - added breaking row to "Coming Soon! Under construction! "

--- a/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Home/UnderConstruction.cshtml
@@ -2,14 +2,15 @@
     ViewBag.Title = ":: Under Construction! :: Messiah Software Solutions Ltd Website + Blog";
 }
 
-<div class="MobileBGPlaceHolder">
+@*<div class="MobileBGPlaceHolder">
 
-</div>
+</div>*@
 
 <div class="UnderConstructionWrapper">
 
     @*<h2>@ViewBag.Title</h2>*@
-    <h2>Coming Soon! Website is under construction! <img src="~/images/comingsoon/bricks.png" />@*<img src="~/images/comingsoon/crown.png" />*@</h2>
+    <h2>Coming Soon! 
+    <br />Under construction! <img src="~/images/comingsoon/bricks.png" />@*<img src="~/images/comingsoon/crown.png" />*@</h2>
 
     <br />
     "Messiah Software Solutions LTD" is a small business, private software company  from israel owned by <a href="https://about.me/vadimrasin" target="_blank">Vadim Rasin</a>.
