made content changes (~\Views\home.cshtml) and played around with the SSL settings, umbraco skips RequireHttpsAttribute so i'll be using url rewrite tool for the force SSL on the production server + backups diffs on ProductionDiffs/MessiahSoftwareSolutions.com/Web.config

--- a/MessiahSoftwareSolutions.com/Views/home.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/home.cshtml
@@ -1,7 +1,7 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Home>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-    ViewBag.Title = "MESSIAH - SOFTWARE SOLUTIONS LTD - Homepage";
+    ViewBag.Title = ":: Under Construction! :: Homepage - Messiah - Software SOLUTIONS LTD";
     Layout = "master.cshtml";
     var backgroundImage = Model.HeroBackgroundImage != null ? Model.HeroBackgroundImage.Url : String.Empty;
 }
@@ -48,15 +48,15 @@
 
     @*<h2>@ViewBag.Title</h2>*@
     <h2>
-        Coming Soon!
+        <!-- Coming Soon! -->
         <br />Under construction! <img src="~/images/comingsoon/bricks.png" />@*<img src="~/images/comingsoon/crown.png" />*@
     </h2>
 
     <br />
-    "Messiah - Software Solutions LTD" is a small business, private software company  from israel owned by <a href="https://about.me/vadimrasin" target="_blank" title="Annoying old ClickBait..">Vadim Rasin</a>.
+    "Messiah - Software Solutions LTD" is a small business, private software company  from israel owned by Vadim Rasin. (<a href="https://about.me/vadimrasin" target="_blank" title="Annoying old ClickBait.." style="font-size:9px">Temp Annoying old ClickBait..</a>)
     <br />
     <br />
-    We are looking for cool projects! <br />
+    We are looking for cool new projects and clients! <br />
     We want to make a better world! <br />
     Come work with us! Give us a new project! :) <br />
     Need a little assistance or counseling?  <br />
