" Lets build and find solutions together and create a better world!" changed instead of old ~temp 2 months "Let's meet and build solutions together and create a better world with the help of God, Bible, Our skills and care for others."

--- a/MessiahSoftwareSolutions.com/Views/master.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/master.cshtml
@@ -216,7 +216,8 @@
                                 <br />
                                 The most important thing for us is integrity, care and creation! We love our clients!
                                 <br />
-                                Let's meet and build solutions together and create a better world with the help of God, Bible, Our skills and care for others.
+                                @*Let's meet and build solutions together and create a better world with the help of God, Bible, Our skills and care for others.*@
+                                Lets build and find solutions together and create a better world!
                             </p>
                         </div>
                     </div>
