added new logo from fiverr that i might use + vector/source files + removed request a quote by email from the top header

--- a/MessiahSoftwareSolutions.com/Views/master.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/master.cshtml
@@ -175,8 +175,8 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="rd-navbar-collapse-toggle" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
-                        <div class="rd-navbar-aside-right rd-navbar-collapse">
+                        <div class="rd-navbar-collapse-toggle" data-rd-navbar-toggle=".rd-navbar-collapse" style="visibility:hidden"><span></span></div>
+                        <div class="rd-navbar-aside-right rd-navbar-collapse" style="visibility:hidden">
                             <!-- RD Navbar Search-->
                             <div class="rd-navbar-search" style="display:none">
                                 @*11.12.19 made the search hidden for now*@
@@ -190,7 +190,7 @@
                                     <button class="rd-search-form-submit mdi mdi-magnify"></button>
                                 </form>
                             </div>
-                            <a class="button button-sm button-default-outline" href="mailto:info@messiahsolutions.com">request a quote by email</a>
+                            @*<a class="button button-sm button-default-outline" href="mailto:info@messiahsolutions.com">request a quote by email</a>*@
                         </div>
                     </div>
                 </nav>
