--- a/MessiahSoftwareSolutions.com/Views/Shared/_Layout.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/Shared/_Layout.cshtml
@@ -165,8 +165,10 @@
                                 </a>
                             </div>
                         </div>
+                        @* 04.02.2020  made collapse bar invisible *@
+                        asfd
                         <div class="rd-navbar-collapse-toggle" data-rd-navbar-toggle=".rd-navbar-collapse"><span></span></div>
-                        <div class="rd-navbar-aside-right rd-navbar-collapse">
+                        <div class="rd-navbar-aside-right rd-navbar-collapse" style="display:none">
                             <!-- RD Navbar Search-->
                             <div class="rd-navbar-search" style="display:none">
                                 @*11.12.19 made the search hidden for now*@
@@ -180,7 +182,7 @@
                                     <button class="rd-search-form-submit mdi mdi-magnify"></button>
                                 </form>
                             </div>
-                            <a class="button button-sm button-default-outline" href="mailto:info@messiahsolutions.com">request a quote by email</a>
+                            @*<a class="button button-sm button-default-outline" href="mailto:info@messiahsolutions.com">request a quote by email</a>*@
                         </div>
                     </div>
                 </nav>
