more UnderConstruction changes // content changes

--- a/MessiahSoftwareSolutions.com/Views/home.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/home.cshtml
@@ -1,7 +1,8 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.Home>
 @using ContentModels = Umbraco.Web.PublishedModels;
 @{
-    ViewBag.Title = ":: Under Construction! :: Homepage - Messiah - Software SOLUTIONS LTD";
+    //ViewBag.Title = ":: Under Construction! :: Homepage - Messiah - Software SOLUTIONS LTD";
+    ViewBag.Title = "Under Construction!";
     Layout = "master.cshtml";
     var backgroundImage = Model.HeroBackgroundImage != null ? Model.HeroBackgroundImage.Url : String.Empty;
 }
@@ -43,68 +44,13 @@
         </div>
 
     </section>*@
+    <div style="text-align:center;color:black">
+        <br />
+        Hello !
+        <br /><br />
+        The website of the company "Messiah - Software Solutions Ltd" is under construction.
+        <br /><br />
+        Thank you for visiting.
+        @*<a href="https://github.com/vadimrasin/" target="_blank">annoying owner's github account</a>*@
 
-<div class="UnderConstructionWrapper">
-
-    @*<h2>@ViewBag.Title</h2>*@
-    <h2>
-        <!-- Coming Soon! -->
-        <br />Under construction! <img src="~/images/comingsoon/bricks.png" />@*<img src="~/images/comingsoon/crown.png" />*@
-    </h2>
-
-    <br />
-    "Messiah - Software Solutions LTD" is a small business, private software company  from israel owned by Vadim Rasin. (<a href="https://about.me/vadimrasin" target="_blank" title="Annoying old ClickBait.." style="font-size:9px">Temp Annoying old ClickBait..</a>)
-    <br />
-    <br />
-    We are looking for cool new projects and clients! <br />
-    We want to make a better world! <br />
-    Come work with us! Give us a new project! :) <br />
-    Need a little assistance or counseling?  <br />
-    @*But <span class="HeavyText">please</span>! Don't leave us after you are <span class="HeavyText">happy</span> and <span class="HeavyText">satisfied</span> from the <span class="HeavyText">
-            answered prophecies..
-        </span>*@
-    <br />
-    <br />
-    Direct links of the owner for questions/offers: <br />
-
-
-
-    <span>
-        <img src="~/images/ComingSoon/email.png" border="0" height="26" width="26"
-             alt="Email Icon for Info@MessiahSolutions.com" title="Email Icon for Info@MessiahSolutions.com" />
-        <a href="mailto:Info@MessiahSolutions.com" title="Info@MessiahSolutions.com">Info@MessiahSolutions.com</a>
-    </span>
-    <br />
-    <span>
-        <img src="~/images/ComingSoon/FaceBook.png" border="0" height="26" width="26"
-             alt="Facebook link of the owner vadim rasin" title="Facebook link of the owner vadim rasin" />
-        <a href="https://facebook.com/vadimrasin" target="_blank">facebook.com/vadimrasin</a>
-    </span>
-
-    <br />
-    <span>
-        <img src="~/images/ComingSoon/linkedin.png" border="0" height="26" width="26"
-             alt="Linkedin of the owner vadim rasin" title="Linkedin of the owner vadim rasin" />
-        <a href="https://linkedin.com/in/vadimrasin" target="_blank">linkedin.com/in/vadimrasin</a>
-    </span>
-
-    <br />
-    <span>
-        <img src="~/images/ComingSoon/Twitter.png" border="0" height="26" width="26"
-             alt="Twitter link of the owner vadim rasin" title="Twitter link of the owner vadim rasin" />
-        <a href="https://twitter.com/hsvdrv" target="_blank">twitter.com/hsvdrv</a>
-    </span>
-
-    <br /><br />
-    @*<br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />
-        <br /><br />+ lots of text to test scroll<br /><br />*@
-</div>
+    </div>
