content / underconstruction changes + important the production original files before changes

--- a/MessiahSoftwareSolutions.com/Views/home.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/home.cshtml
@@ -44,13 +44,10 @@
         </div>
 
     </section>*@
-    <div style="text-align:center;color:black">
-        <br />
-        Hello !
-        <br /><br />
-        The website of the company "Messiah - Software Solutions Ltd" is under construction.
-        <br /><br />
-        Thank you for visiting.
-        @*<a href="https://github.com/vadimrasin/" target="_blank">annoying owner's github account</a>*@
+        <div style="text-align:center;color:#000">
 
-    </div>
+            <br />
+            <br />
+            The website of the company "Messiah - Software Solutions Ltd" is under construction.
+            @*<a href="https://github.com/vadimrasin/" target="_blank">annoying owner's github account</a>*@
+        </div>
