--- a/MessiahSoftwareSolutions.com/Views/home.cshtml
+++ b/MessiahSoftwareSolutions.com/Views/home.cshtml
@@ -6,7 +6,7 @@
     Layout = "master.cshtml";
     var backgroundImage = Model.HeroBackgroundImage != null ? Model.HeroBackgroundImage.Url : String.Empty;
 }
-@*<section class="section section--full-height background-image-full overlay overlay--dark section--content-center section--thick-border"
+<section class="section section--full-height background-image-full overlay overlay--dark section--content-center section--thick-border"
              style="background-image: url('@backgroundImage')">
         <div class="section__hero-content">
             <h1>@Model.HeroHeader</h1>
@@ -43,11 +43,11 @@
             </div>
         </div>
 
-    </section>*@
-        <div style="text-align:center;color:#000">
+    </section>
+        @*<div style="text-align:center;color:#000">
 
             <br />
             <br />
             The website of the company "Messiah - Software Solutions Ltd" is under construction.
-            @*<a href="https://github.com/vadimrasin/" target="_blank">annoying owner's github account</a>*@
-        </div>
+            <a href="https://github.com/vadimrasin/" target="_blank">annoying owner's github account</a>
+        </div>*@
